# wr124

./: .dockerignore  .gitignore  .gitmodules  .wr124.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: DOCKER_README.md  Dockerfile  deploy.sh  nginx.conf  supervisord.conf
frontend/public/: index.html  manifest.json
frontend/src/: App.css
frontend/src/api/: config.js
frontend/src/components/: CreateTaskModal.js  EditTaskModal.js  EnhancedTaskList.js  Header.js  ProjectSidebar.js  TaskDetailModal.js  TaskList.js  TaskMemoryModal.js  TaskTableView.js  TaskVersionModal.js  UnifiedTaskManager.js
frontend_backup/: README.md  package-lock.json  package.json
frontend_backup/src/: App.js
frontend_backup/src/components/: TaskList.js  TaskTableView.js  TaskVersionModal.js
script/: build.sh  build_all.sh  build_all_iter.sh  build_one.sh  build_one_iter.sh  debug_command_mcp.py  mcp_client.py  prompt1.md  query_tasks_statistics.py  run_agent.py  run_agent_new.py  run_cpp_build.py  run_server.py  start.sh  task1.md  test.json
shrimp/: README.md  main.py
shrimp/api/: __init__.py  dependencies.py
shrimp/api/routes/: health.py  router.py
shrimp/api/routes/v1/: tasks.py  versions.py
shrimp/core/: response.py  validators.py
shrimp/db/: database.py
shrimp/models/: __init__.py  embedding.py  memory.py  task.py
shrimp/services/: __init__.py  memory_service.py  task_service.py  version_service.py
shrimp/tools/: __init__.py  base_tool.py  memory_tools.py  response_format.py  task_tools.py  todo_tools.py
shrimp_backup/: __init__.py  pyproject.toml
shrimp_backup/api/: utils.py
shrimp_backup/api/routes/: __init__.py
shrimp_backup/api/routes/v1/: __init__.py  memories.py  tasks.py
shrimp_backup/core/: config.py  events.py
shrimp_backup/db/: __init__.py
shrimp_backup/models/: audit.py  base.py  version.py
shrimp_backup/tools/: response_format.py  todo_tools.py
wr124/: __init__.py  agent_base.py  agent_plan.py  config_manager.py  interaction_handler.py  interactive_team.py  keyboard_listener.py  main.py  prompt_general_system.py  prompt_mcp_system.py  team_base.py  telemetry_setup.py  terminal_manager.py  tool_manager.py  util.py
wr124/agents/: agent_base.py  agent_param.py  cpp-build-engineer.md  memory_recorder.py  prompt_compress.py  team_base.py
wr124/agents/agent_config/: cpp_build_engineer.md  deep_researcher.md
wr124/agents/preset_agents/: compress_history.md  cpp_build_engineer.md  deep_researcher.md  general_assistant.md  search_agent.md  shrimp_agent.md
wr124/config/: models.py
wr124/filesystem/: __init__.py  file_edit.py  shell_tool.py  utils.py
wr124/mcp/: __init__.py  _base.py  _factory.py  _session.py
wr124/session/: README.md  __init__.py  session_state_manager.py
