[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wr124"
version = "1.0.0"
description = "Multi-tenant MCP service for task and memory management"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "WR124 Team", email = "wr124@example.com"}
]
dependencies = [
    "autogen-agentchat>=0.6",
    "autogen-ext[openai,rich]>=0.6",
    "dotenv>=0.9.9",
    "fastmcp>=0.1.0",
    "uvicorn[standard]>=0.24.0",
    "fastapi>=0.104.0",
    "motor>=3.3.0",
    "pydantic>=2.0.0",
    "pymongo>=4.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "opentelemetry-sdk>=1.35.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.35.0",
    "opentelemetry-instrumentation-openai>=0.45.0",
    "aiohttp>=3.12.15",
]

[project.scripts]
wr124 = "wr124.main:run"

[tool.setuptools]
packages = ["wr124"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/weinaike/wr124"
Repository = "https://github.com/weinaike/wr124.git"
